Ma première balise

--- a/Cours 1/index.html
+++ b/Cours 1/index.html
@@ -1,1 +1,23 @@
-HELLOWORLD
+<html> 
+
+	<head> 
+	
+	</head>
+
+	<body> 
+
+		<h1> 
+
+			je code 
+
+		</h1>
+
+		<p>
+
+			je code encore
+
+		</p>
+
+	</body>
+
+</html>
