Step 3 : lien et image

--- a/Cours 1/index.html
+++ b/Cours 1/index.html
@@ -14,7 +14,29 @@
 
 		<p>
 
-			je code encore
+			<a href="http://www.spin-interactive.com" target="_blank" >
+				
+				<em> Spin Interactive </em>
+
+ 			</a>
+
+				<ul>
+
+					<li> Apprendre l'HTML </li>
+
+					<li> Apprendre le CSS </li>
+
+					<li> Publier une page </li>
+
+					<li> Faire un site internet </li>
+
+				</ul>
+
+			<img src="telecharger.jpg" alt="éléphant">
+
+			<br>
+
+			<img src="https://d21lnwedw40afu.cloudfront.net/pub/media/catalog/product/b/a/baby_elephant_m1_2.jpg">
 
 		</p>
 
